--- a/TDRv/Form1.resx
+++ b/TDRv/Form1.resx
@@ -252,77 +252,83 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="tsb_DevConnect.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJzSURBVFhH7ZexaxRBFMYPC0GN3u2eQRQLEQsVewsbK0kh
+        YpO/wEKQgAk2dqmsDpXkbmaNMVjZHBYiKkgKsVERhaCnucw7ORJIZZFGFLE4vzf7dp2TW3Obu12b/GC4
+        3W9n5/vezOxyW9gmT4q326VisHxETvPFD8xJX5uGr6gtUn7E5po6aHWRh8vIjBktKXPFNk0XDt9c28V6
+        LuYwqHiafoiJ2x5nas7Vwfg5G3iKFnF8D4bT3HD8VoyzM9+sujAMwmnzTqTh4Jqj0msi9wR9sAzUGa3R
+        MZEGo7tyMylyItEsoI2LNBi+MpfEvMFhRE4kDhCYKZG2hlRuK8aA9X5D4MXzgPuWVfOiSOlxpx27fQaz
+        cA5r/22zECNzzf0IsIQ+GwcqS3tETodrDuOPEmI5NP/3TPi6dVeuV0RKR5c5r6VaOYFH6n10bvskhLD9
+        ofN7QqT08M2uGVPUq0cxA6+trsw8a3+H+GNuyNOtU/bGtGCQih1EmRcixZSrq4ewti9DU8fc/VX01Ztt
+        npFb0sEbBgNt8EDFKp0VuYt982s+wi3Gpqjcq5EKz+mXd4fGpGt6+JGRgV+J1JODc+u70e8J98WyfOI9
+        gmW5WtJfzkuXrYFqpiRAvPaJTHd2wPyhDaHpvqiDgcHGbQC8RERKxAtal8OwfQbuh/Js87hU9EaknmCX
+        Xx+6eUT0qCWtJ8Ldysyc4ccvMrDHNZrALh+D2SQ22jN7TdHPTMxh8NQaa/ruBnEbpv+RX1s5LbcMD0z9
+        QmhA64V6Yydr/C7gSm0LaCKz//aeat0IKzSNvdXPZZHzA2vaRoAP/+3rhY3580lOt8mBQuE3NBYBkEij
+        vhcAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsb_DevPOptSet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM4SURBVFhH3Ve/ixNBFE4nol6yu56HYKWCh42lrZ2dCHKd
+        ohaKIBY2YucfEETuktnkFBEiiKQQFBGu0e6qEw6xuMzkjBhFFMRCReGE83uzbyb7M5uNUcQPHly+9817
+        b2bezM6VisAR8pnrq81hRhqWTx5pCdOM5ZNHXoL/owAEaGMfH5Zr6ghTFuMW4NY7Z1yheq6Q95hKR0XI
+        kyYImVNXgni3IQ+6vnyclcDAjhPyKxJemq6r/Uj6xPBklIPlMczLLY4vnwdCeQ32OQimPoYDkI9HJBCM
+        C2sDc3z1w/goB+XiIQPAcVUPEHK57L9wdt1an8Gg6iCQrLJ0KMp+Zy9i3DTjkPwureCO2lsPK6MnSLlY
+        HmCqKfcNZipPMP1boB6K9xEKO6sLQC7KyTRmj7021TL1x4BVeKBzcX/pSvXMhdzwFtZmNZkDx++eR6AW
+        dTZm08f4Nu0xu4ei0ugcgn6DcuoVoiOnC6AmmZdTrMsE9m8l0KeZfMmyTMxUV7fpXNBTbn3uTQAEf4pt
+        OMraBMJa2Bw1atCsai7Et1meAO6Dw/Db42y1nq8uIvl7TQr5M205oTllBjKVgPGTlikLM2syTBLb1jnN
+        rgDO4noZe9rUgpQvGng9+4qvjjGVAPk4SWIVKKaO7Xdr0/UP25mOwjSk7dAQuNk2dzZf72YqAfLp8dAy
+        ZWFOWvxoRjCsAH2Xw0d7zlQC3A/YRtVjyiK3gLwtANfSwdFwTCVAPh7fYsrCbAFM7Ln+ZivTAUZpQjr7
+        HCD/YwQtUxaIv2D8sE90K2oHfox8DOG3dwA1HO05Waj5KMYKyxPwxNpxJF41Wli78EVEg0IBIobil1iW
+        ifKNXiVyEZnGK3IV852Ah4vqI+k7/P0obdvS4C32ZjHuG+W0DWk6FMH+xsdIN3PkpA37HFOVmUenIEyv
+        UK7I55iA5ok8SDz/1QGnoW4HRZF174/8tRTyCifq4zFymWnkUEuajz9INGJPMoi/D5KHrfiTDPwylvwc
+        /U05Up9kBHowxgfSc8oR3Qso6IvhWZ6A8WMFxniUMpDoTnzpDEwQ/plAlt8+y1M+UoUwbgETwz9TQJ6x
+        fPJAc0343/NS6ReKPJnDUwQOsgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsb_DevParamSet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACEAAAAgCAYAAACcuBHKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIISURBVFhH7ZY/LwRBGMavUom7XYdWpRCFhEYhUUmIVkI0
+        whcgFKJRKiQS7naXnEbhCiGiUup0ComE3dlraETiM/C+M8/c7Vk3ztlNRO6XTO72mWfeeXZn9k8miuWF
+        05YTXNtusAXJSM6tzEi/E0xCMsJ12W8Vw3lIcdhku+KdjZCMqMA/9xtPsh1C0w6hSS3E1n2H5QbHKkC1
+        baK3njRCdB4+5inArZ5cj0Erw1YjjRBUcwkTnnbuBT2sZb2HfssVL6x3H4Sj0qhJKcSN9BTEGCSJVfTX
+        MHYPkuI/h0hvObpKT3Y0BB+jq47UNmbOCxbopfUWKfbOx6zDUk/St6jtBYO6EPuyBTFBv5dayxb9YVhj
+        1K7CLx9WdMbLKHQFSUJrfAR9BVKMxEJYjjiTHtefgyQhbVbp4QWkGMldCe1xxTkkie2JbUywAynGtyGo
+        c1MZVOONxBsK3VXoa2q86nH8ddZon6zSFXqWuuEryxiCOsq1wtoog9z2lip9sFUhfV97oo11WL6kYQha
+        wyFZwBGv+UJlgDW+521HnChdne1naNwUTSowueBjdDWkYYico9aSCm1AkuTdcAQD7iDF0EX5F5KRvx2i
+        1eVgEgvBUMePNqYm0RAMdTZ1i0ZJPATDna0UbYf4zyHUm5Ce/4eQjOjQPA6SEXoM7Ep/0V+E9DX8kYK/
+        TfF7fybzASe0SA3i8TXAAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="tsb_GetTestIndex.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJgSURBVFhH5ZY9aBRBFMevshG8mT2DFgoKgmAhiKWNYKMQ
+        LYQEBBVsBT8QCWKjhY1YKLmduRhBCVhIOm1UEAQLES0MGuLlvY2RNIKiIAhiFd/Mvtm9/bhFi7zGHzzY
+        eZ//m5293ZYj6sGuaBq2+IU0frjFVWfKLO1mtxztLu4PAtw1u+X4LwVEFl66ecoujYoKcAddG+iHeSTk
+        vJiAkXh+cz4YV7VdfOoDUgIigy9q50gIiExyNMygW9Bld4qEAB3DtXQGPGZXjogAA89df23hErtyJAQ0
+        9l9rAR37cWfWv/dhG7tz1lqAsngk9GdXkSYBG+6sRHRwrjhTBk67FxeH/hq6/xO+v8FldhUZJoAenVNU
+        9DXEMjN4/1+ERAaeuDp3ENlVpE4ADTmTDbT4m9ZzBTEGvtH6pG/QxOz8Om3xh6vRvWSCvUXKAkZi3EGP
+        y+fUByudqeQAp9J24oWQ64zWFzlUi3vZhFxl+vXfGmUBpPhu2hx+tS3s4bQM3cNx2oHvoYbyb3GoAsUf
+        cc4rdlUpCbgart2/F6dU0JP9fSTifZZr4CHtxlYOezoWT4S46sIou6sMClAxLviGFhfa95YVp9TSnv60
+        nfKehVoS9C59YnCMbuFM5rc4yyX1DAqgXxGaneNwI5tuzK2n3NuhvmK0S5w6nDoBQw/MEDbaZC/V3qTa
+        t7QrP8le0/VlDjdTFkD38w2HZKjZgesckqGyAzEe5JAMJQFf2C3HoAAVwwN2y0F/KodyAYtn2S2HmoTj
+        QQAfQhmj17P/QOlMweHaBAHTcXLM7wKLGHPnQcrSb4pW6w8Izgn+4jOYgAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsb_StartTest.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGWSURBVFhH7ZdBTsMwEEVzgoqk3bBGYsEaiSOw4Qps2XGG
+        ngHRmLCK2CFO0gN0U7sVSOzgEOBx/+DW9SgKcUkRPGlUjef3z6h1Ijv7J+RALS+KUt/nSptCmY8U4bys
+        J3mjTZxC6XHMIG3oMdptMqwWp2uiWa7MOUqdIS/yZH/qhZLHimoq2s8plpJD3uhRY8lTlObZTTiZn2Ep
+        OeTtetheWPK4gg2kO0Ps86sGGFUvh4MbfYS0FZ0HyCemZK19vh8GVbtBxD5iISAvzRtrKeyOfs3V/Arl
+        RsQ+YiGAdduhH4s7fQKZCOuResRCAOuiUZp3G9eQRmEtUo9YCGBdQzxBvgVrkHrEQgDrmiJXi+i+4DpS
+        j1gIYF1TDJW5xFc24DpSj1gIYF1D9PQX9LsJf+gx3IMXkT819fIqJka3y2MKpK1IMkAX9ncAPobbTZXs
+        MBpC3qse2mDJQ+f21XR6hqXkfJ2MbS8sedyFxA3gfoVpysMpeTlP+IsXlPVHbHchXEwYujTYaWs6OscN
+        vhHWizyjF5I/TpZ9AtiE+76IlkycAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
